# pip-api

./: .gitignore  .travis.yml  CHANGELOG  MANIFEST.in  README.md  generate_matrix.py  pyproject.toml  setup.py  tox.ini
.github/workflows/: pip-feed.yml  release.yml  test.yml
pip_api/: __init__.py  _call.py  _hash.py  _installed_distributions.py  _parse_requirements.py  _version.py  exceptions.py  hash.py  releases.py
pip_api/_vendor/: pyparsing.py
pip_api/_vendor/packaging/: _manylinux.py  markers.py  requirements.py  specifiers.py  version.py
pip_api/_vendor/packaging_legacy/: version.py
tests/: conftest.py  test_hash.py  test_installed_distributions.py  test_parse_requirements.py  test_pep650.py  test_releases.py  test_tests.py  test_version.py
tests/data/: dummyproject-0.0.1-py3-none-any.whl  fakeproject-1.0-py3-none-any.whl
tests/data/dummyproject/: setup.py
tests/data/dummyproject_pyproject/: pyproject.toml
