[project]
name = "pip_api"
version = "0.0.34"
description = "An unofficial, importable pip API"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Dustin Ingram", email = "di@python.org" }]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = ["pip"]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://pypi.org/project/pip-api/"
Issues = "https://github.com/di/pip-api/issues"
Source = "https://github.com/di/pip-api"

[tool.black]
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | env
    | _build
    | buck-out
    | build
    | dist
  )/
  | pip_api/_vendor
)
'''

[tool.vendy]
target = 'pip_api'
packages = ["packaging==21.0", "pyparsing==2.4.7", "tomli==2.0.1"]
